[gd_scene load_steps=3 format=3 uid="uid://dgi7cacvv6ca0"]

[ext_resource type="Script" path="res://Prog54b.gd" id="1_e2uw3"]

[sub_resource type="LabelSettings" id="LabelSettings_6lw4l"]
line_spacing = 2.765
font_size = 50

[node name="Prog54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2uw3")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 104.0
offset_right = 664.0
offset_bottom = 264.0
text = "Numbers:"
label_settings = SubResource("LabelSettings_6lw4l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 288.0
offset_right = 656.0
offset_bottom = 448.0
text = "Average:"
label_settings = SubResource("LabelSettings_6lw4l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 368.0
offset_right = 656.0
offset_bottom = 528.0
label_settings = SubResource("LabelSettings_6lw4l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 544.0
offset_right = 272.0
offset_bottom = 640.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 544.0
offset_right = 640.0
offset_bottom = 640.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 544.0
offset_right = 1064.0
offset_bottom = 640.0
text = "Close"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.035
anchor_top = -0.025
anchor_right = -0.035
anchor_bottom = -0.025
offset_left = 128.32
offset_top = 240.2
offset_right = 248.32
offset_bottom = 336.2
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.035
anchor_top = -0.025
anchor_right = -0.035
anchor_bottom = -0.025
offset_left = 336.32
offset_top = 240.2
offset_right = 480.32
offset_bottom = 336.2
alignment = 1

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.035
anchor_top = -0.025
anchor_right = -0.035
anchor_bottom = -0.025
offset_left = 584.32
offset_top = 240.2
offset_right = 728.32
offset_bottom = 336.2
alignment = 1

[node name="LineEdit4" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.035
anchor_top = -0.025
anchor_right = -0.035
anchor_bottom = -0.025
offset_left = 816.32
offset_top = 240.2
offset_right = 984.32
offset_bottom = 336.2
alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
